Trim all the things for the learning centre

--- a/site/src/documents/styles/style.css.styl
+++ b/site/src/documents/styles/style.css.styl
@@ -1,5 +1,6 @@
 ---
 standalone: true
+cleancss: true
 ---
 
 // Coded in Stylus: http://learnboost.github.com/stylus/
@@ -762,23 +763,5 @@ div.container
 table tbody th
 	text-align: left
 
-.pin
-	fieldset, .errors
-		margin-bottom: 2em
-	label
-		margin-top: 1.5em
-	.errors
-		color: red
-	fieldset
-		legend, label, input
-			display: block
-			width: 100%
-		legend
-			font-weight: fontMyraidBoldest
-			font-size: 120%
-		label
-			font-weight: fontMyraidBold
-		p
-			font-style: italic
-			font-weight: fontMyraidLight
-			margin: 0
+html.js .no-js
+	display: none
