--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -15,10 +15,10 @@ cleancss: true
 @import url("http://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,600,700,900")
 
 // vendor
-@import '../../files/vendor/highlight.css'
-@import '../../files/vendor/normalize.css'
-@import '../../files/vendor/h5bp.css'
-@import '../../files/vendor/bootstrap/button.css'
+@import '../../raw/vendor/highlight.css'
+@import '../../raw/vendor/normalize.css'
+@import '../../raw/vendor/h5bp.css'
+@import '../../raw/vendor/bootstrap/button.css'
 
 
 // ====================================
