Attempt at improved sidebar. Currently suffering from an issue with recursive sidebars

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -52,7 +52,7 @@ column($columns)
 // Configuration
 
 // Variables
-theme = "light"
+theme = "gray"
 
 // Text
 colorHeading = #3F3931
@@ -256,8 +256,11 @@ pre code
 	// box-shadow: 0 0 2px hsl(192, 8%, 97%)
 
 nav
+nav ul
+nav ol
 nav li
 	list-style: none
+	padding-left: 0
 
 blockquote
 	margin: 3em
