fixed project sorting, added project links

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -316,11 +316,13 @@ blockquote
 	}
 }
 
-a:not(.hover-link),.link
+a:not(.hover-link), .link
 	cursor: pointer
 	text-decoration: none
 	color: colorLink
 	font-weight: fontMyraidBold
+a.heading-link
+	color: colorAccent
 .hover-link
 	cursor: pointer
 	text-decoration: none
