fixed sidebar expanding on forever

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -348,11 +348,12 @@ div.container
 	flex: 1 1 auto
 
 .sidebar
+	width: 12em
+	max-width: 300px
 	flex: 1 0 auto
 	margin-left: 2%
 	opacity: 0.4
 	transition: opacity 0.5s ease-out
-	width: 12em
 	.sidebar-nav
 		width: 12em
 		position: fixed
