update base files, fix linting, remove vendor

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -1,25 +1,14 @@
----
+/***
 standalone: true
-cleancss: true
----
+***/
 
-// Coded in Stylus: http://learnboost.github.com/stylus/
+// Coded in Stylus: http://stylus-lang.com
 
 // ====================================
 // Imports
 
-// nib: http://visionmedia.github.com/nib/
+// nib: https://github.com/tj/nib
 @import 'nib'
-
-// fonts
-@import url("http://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,600,700,900")
-
-// vendor
-@import '../../raw/vendor/highlight.css'
-@import '../../raw/vendor/normalize.css'
-@import '../../raw/vendor/h5bp.css'
-@import '../../raw/vendor/bootstrap/button.css'
-
 
 // ====================================
 // Responsive Layout Awesomeness
